Fix alignment issues with top title and project tech stacks

--- a/styles/components/_project.scss
+++ b/styles/components/_project.scss
@@ -31,6 +31,11 @@
   &__header {
     display: flex;
     align-items: center;
+
+    @include responsive(portrait) {
+      align-items: flex-start;
+      flex-direction: column;
+    }
   }
 
   &__title {
